feat(userlist): add search functionality for user lists and retrieve list author